<resources>
    <string name="table">Table</string>
    <string name="app_name" translatable="false">GradeStat</string>
    <string name="subjects">Subjects</string>
    <string name="grades">Grades</string>
    <string name="weight">Weight</string>
    <string name="overview">Overview</string>
    <string name="total">Total</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="add_table">New table…</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="subject_name">Subject name</string>
    <string name="table_name">Table name</string>
    <string name="grade_name">Grade name</string>
    <string name="use_weight">Use weight</string>
    <string name="min_grade">Minimum grade</string>
    <string name="max_grade">Maximum grade</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="value_too_low">Value too low</string>
    <string name="value_too_high">Value too high</string>
    <string name="value_cannot_be_empty">Value cannot be empty</string>
    <string name="no_grades">No grades available</string>
    <string name="no_subjects">No subjects available</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_object">Do you really want to delete %1$s?</string>
    <string name="theme">App theme</string>
    <string name="use_dark_theme">Use dark theme</string>
    <string name="use_light_theme">Use light theme</string>
    <string name="grade_limits">Grade limits</string>
    <string name="ignore_limits">Ignore grade limits</string>
    <string name="enforce_limits">Enforce grade limits</string>
    <string name="compensation">Compensation</string>
    <string name="disable_compensation">Do not display compensation in overview</string>
    <string name="enable_compensation">Display compensation in overview</string>
    <string name="advanced">Advanced settings</string>
    <string name="advanced_desc_on">Display advanced table settings</string>
    <string name="advanced_desc_off">Do not display advanced table settings</string>
    <string name="history">History</string>
    <string name="compensation_double">Compensate twice</string>
    <string name="compensate_double_on">Grades are compensated twice</string>
    <string name="compensate_double_off">Grades are compensated once</string>
    <string name="average">Average</string>
    <string name="table_no_write">No write access to table folder</string>
    <string name="ringColor">Ring color</string>
    <string name="ringRainbow">Rings are dyed to match grade</string>
    <string name="ringStatic">Rings have a static color</string>
    <string name="table_read_failed">Cannot read table %1$s</string>
    <string name="table_invalid_xml">Table %1$s contains invalid xml</string>
    <string name="sort_by_title">Sort subjects</string>
    <string name="sort_by_custom">Custom</string>
    <string name="sort_by_alphabet">Alphabetically</string>
    <string name="sort_by_latest">Latest</string>
    <string name="sort_by_greatest">Greatest</string>
    <string name="sort_invert">Invert sorting</string>
    <string name="sort_invert_on">Inverted sorting order</string>
    <string name="sort_invert_off">Normal sorting order</string>
</resources>
